[gd_scene load_steps=4 format=3 uid="uid://bujy0w1ukxvnt"]

[ext_resource type="Script" path="res://Entities/FishingLine.gd" id="1_lxfwv"]
[ext_resource type="Texture2D" uid="uid://d1u7lfgs67og8" path="res://Textures/hook.png" id="2_xous4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4agek"]
radius = 5.0

[node name="FishingLine" type="Node2D" groups=["lines"]]
script = ExtResource("1_lxfwv")
line_cast_timer = Vector2i(5, 10)
line_cast_range_around_player = Vector2i(-50, 50)
line_cast_depth_range = Vector2i(-65, 65)
line_cast_speed = 4.0

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 20)
width = 1.0

[node name="CastTimer" type="Timer" parent="."]

[node name="Hook" type="Area2D" parent="." groups=["hooks"]]

[node name="Hook2" type="Sprite2D" parent="Hook"]
texture = ExtResource("2_xous4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hook"]
shape = SubResource("CircleShape2D_4agek")

[connection signal="line_cast" from="." to="." method="_on_line_cast"]
[connection signal="timeout" from="CastTimer" to="." method="_on_cast_timer_timeout"]
